Colaboratory를 통해 생성됨

--- a/variables.ipynb
+++ b/variables.ipynb
@@ -155,15 +155,15 @@
       "cell_type": "code",
       "metadata": {
         "id": "DfS-gknCRheL",
-        "outputId": "ff76fc0a-73db-43fc-bb86-946381a6cb4d",
+        "outputId": "646c1cb3-59f7-4f15-8a5a-4df6c4674263",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "a = [1,'a', [3, '4']]; print(type(a)); print(a[0]); print(a[1]); print(a[2]); print(a[2][1])"
+        "a = [1,'a', [3, '4'], 5]; print(type(a)); print(a[0]); print(a[1]); print(a[2]); print(a[2][1])"
       ],
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -180,26 +180,134 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "a[1:3]"
+      ],
+      "metadata": {
+        "id": "xt7qWtoU_cdf",
+        "outputId": "4e576808-a316-4ce0-8e16-aeeda10cd6e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', [3, '4']]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[2][0]"
+      ],
+      "metadata": {
+        "id": "t543AmKq_e6L",
+        "outputId": "4bf7f816-acac-4111-e0ba-9fb81b0e99b2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a[1:-1]"
+      ],
+      "metadata": {
+        "id": "a-qth6E7_lN7",
+        "outputId": "cd84e59b-27f0-4067-eca7-caeb86123fd2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['a', [3, '4']]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "list와 string은 index 방법 동일"
+      ],
+      "metadata": {
+        "id": "7v1slLYd_bMB"
+      }
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "id": "2sivfloGRheM",
-        "outputId": "5c768bb7-e02b-4c87-a76e-3e992cdb244e"
+        "outputId": "dce7415b-0664-4a5a-e4a9-60d22ba95fda",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "a =\t{\"a\": \"apple\", \"b\": \"orange\", \"c\": 2014}\n",
+        "a =\t{1: \"apple\", \"b\": \"orange\", \"c\": 2014}\n",
         "print(type(a))\n",
-        "print(a[\"a\"])"
+        "print(a[1])"
       ],
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "<class 'dict'>\n",
             "apple\n"
-          ],
-          "name": "stdout"
+          ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "key : value로 구성되어있음. key에는 문자/숫자 모두 들어갈 수 있음. 순서값은 들어있지 않아 index 불가능"
+      ],
+      "metadata": {
+        "id": "Xg9rm6cPAWsg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*＊변수는 숫자/string/list(tuple과 유사)/dict로*"
+      ],
+      "metadata": {
+        "id": "kMW3Ev_E_ywT"
+      }
     }
   ]
 }
