Colaboratory를 통해 생성됨

--- a/numpy_matplotlib.ipynb
+++ b/numpy_matplotlib.ipynb
@@ -53,7 +53,7 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -63,7 +63,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8a4d14a6-b816-432a-caae-902c8c640f33"
+        "outputId": "9d36fdcf-58bd-4a76-be93-811727901e69"
       },
       "source": [
         "x = np.array([1,2,3])\n",
@@ -71,7 +71,7 @@
         "print(type(x))\n",
         "print(x.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7143e4dd-2864-4b57-855e-56eb92a6bd75"
+        "outputId": "04d23693-8cd6-4183-c831-bad825ef371f"
       },
       "source": [
         "x = np.arange(0,10,2)\n",
@@ -108,7 +108,7 @@
         "print(type(x))\n",
         "print(x.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,7 +124,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "0부터 10까지, 2씩 increase"
+        "0부터 10까지, 2씩 increase (10은 제외)"
       ],
       "metadata": {
         "id": "Lt1GlnPI7cL9"
@@ -137,21 +137,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "11427674-886c-4f82-ca48-a1465f53223e"
+        "outputId": "c2ce06c5-35d0-489e-ba24-ff935c742ea5"
       },
       "source": [
-        "x = np.linspace(0,10,6)\n",
+        "x = np.linspace(0,12,6)\n",
         "print(x)\n",
         "print(type(x))\n",
         "print(x.shape)"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[ 0.  2.  4.  6.  8. 10.]\n",
+            "[ 0.   2.4  4.8  7.2  9.6 12. ]\n",
             "<class 'numpy.ndarray'>\n",
             "(6,)\n"
           ]
@@ -161,7 +161,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "0부터 10까지 등간격으로 6개의 숫자를 만들어라"
+        "0부터 12까지 등간격으로 6개의 숫자를 만들어라"
       ],
       "metadata": {
         "id": "8uR37hjS7wOT"
@@ -203,10 +203,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "4bbbb3d7-554f-4a35-dd0a-9d89769d1ecd"
+        "outputId": "3a5cb13a-7a9f-4a68-c5c9-2b2471589f2d"
       },
       "source": [
-        "x = np.array([[[1,2,3],[1,2,3],[4,5,6]], [[7,8,9], [7,8,9], [10,11,12]]])\n",
+        "x = np.array([[[1,2,3],[4,5,6]], [[7,8,9], [10,11,12]]])\n",
         "print(x)\n",
         "print(type(x))\n",
         "print(x.shape)"
@@ -218,12 +218,76 @@
           "name": "stdout",
           "text": [
             "[[[ 1  2  3]\n",
-            "  [ 1  2  3]\n",
             "  [ 4  5  6]]\n",
             "\n",
             " [[ 7  8  9]\n",
-            "  [ 7  8  9]\n",
             "  [10 11 12]]]\n",
+            "<class 'numpy.ndarray'>\n",
+            "(2, 2, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.array([[[1,2,3]], [[7,8,9]], [[10,11,12]]])\n",
+        "print(x)\n",
+        "print(type(x))\n",
+        "print(x.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Scu4wOIBjTJm",
+        "outputId": "0082c5bc-cadb-4997-e96e-c8b50022b9f6"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 1  2  3]]\n",
+            "\n",
+            " [[ 7  8  9]]\n",
+            "\n",
+            " [[10 11 12]]]\n",
+            "<class 'numpy.ndarray'>\n",
+            "(3, 1, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = np.array([[[1,2,3],[4,5,6], [7,8,9]], [[7,8,9], [10,11,12], [13,14,15]]])\n",
+        "print(x)\n",
+        "print(type(x))\n",
+        "print(x.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fWw-zYzTi9SU",
+        "outputId": "88173a78-b668-4d3f-9a16-e751f1aae95c"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[[ 1  2  3]\n",
+            "  [ 4  5  6]\n",
+            "  [ 7  8  9]]\n",
+            "\n",
+            " [[ 7  8  9]\n",
+            "  [10 11 12]\n",
+            "  [13 14 15]]]\n",
             "<class 'numpy.ndarray'>\n",
             "(2, 3, 3)\n"
           ]
@@ -370,7 +434,7 @@
       "source": [
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -388,7 +452,7 @@
         "print(x)\n",
         "plt.hist(x, bins=10)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,7 +537,7 @@
         "plt.subplot(2, 2, 2) # (rows, columns, panel number)\n",
         "plt.plot(theta2, s2, '.')"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
